feat: add token intents, enrichments api, 3ds changes and more
